docs: update README.md